add: room details room and location app

--- a/service-details.html
+++ b/service-details.html
@@ -364,6 +364,262 @@
                 </div>
               </div>
             </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="service-details mt-60">
+                  <nav>
+                    <ul class="nav-tab m-0" id="nav-tab" role="tablist">
+                      <li
+                        class="active"
+                        id="nav-tab1"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-tab1_item"
+                        role="tab"
+                        aria-controls="nav-tab1_item"
+                        aria-selected="true">
+                        Rooms
+                      </li>
+                      <li
+                        class=""
+                        id="nav-tab2"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-tab2_item"
+                        role="tab"
+                        aria-controls="nav-tab2_item"
+                        aria-selected="false">
+                        Location
+                      </li>
+                      <li
+                        class=""
+                        id="nav-tab3"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-tab3_item"
+                        role="tab"
+                        aria-controls="nav-tab3_item"
+                        aria-selected="false">
+                        Reviews
+                      </li>
+                    </ul>
+                  </nav>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="skill-progress-area">
+                  <div
+                    class="tab-content tab-content-wrapper"
+                    id="nav-tabContent">
+                    <div
+                      class="tab-pane fade show active"
+                      id="nav-tab1_item"
+                      role="tabpanel"
+                      aria-labelledby="nav-tab1"
+                      tabindex="0">
+                      <div class="content-wrapper mt-50">
+                        <h3 class="title">Room Details</h3>
+                        <p class="desc mt-20">
+                          Lorem ipsum dolor sit amet, an has justo simul
+                          nominati. Sea te latine detraxit. Eum id omnis
+                          delectus. An dolores appetere sit, quo ubique
+                          splendide definitionem an, ut molestie offendit
+                          sapientem mea. Nihil voluptatibus cum ne, nam at dicta
+                          graeci equidem. Semper audire consulatu mea at,
+                          aliquam epicurei ut eum. Ad malis dissentias
+                          delicatissimi his, et labore accusam duo. Ferri vitae
+                          forensibus vel at. Ut omnium indoctum euripidis sed.
+                          Mel dico alia admodum eu, essent voluptaria
+                          reprehendunt ei pro, porro eligendi molestiae sea
+                          cu. Nihil cum ne, nam at dicta graeci. Semper audire
+                          consulatu mea at.
+                        </p>
+                      </div>
+                      <div class="mt-60">
+                        <h3 class="title">Amenities</h3>
+                        <div class="list-item-wrapper-outer mt-30">
+                          <ul class="list-item-wrapper">
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Air Conditioner
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              LCD Television
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Room No Smoking
+                            </li>
+                          </ul>
+                          <ul class="list-item-wrapper">
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Garage space
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Minibar
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Safe Deposit Box
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Pets Allowed
+                            </li>
+                          </ul>
+                          <ul class="list-item-wrapper">
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Pure air
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Safety Box
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Parking
+                            </li>
+                            <li>
+                              <i class="fa-solid fa-angles-right"></i>
+                              Hair Dryer
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                      <div class="mt-60">
+                        <h3 class="title">Extra Services</h3>
+                        <table class="pricing-table mt-30">
+                          <tr>
+                            <td class="feature-description">
+                              <i class="fa-solid fa-angles-right"></i>
+                              LCD Television
+                            </td>
+                            <td class="feature-price">
+                              <span>+ 54$</span>
+                              to price (per night)
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="feature-description">
+                              <i class="fa-solid fa-angles-right"></i>
+                              Parking
+                            </td>
+                            <td class="feature-price">
+                              <span>+ 54$</span>
+                              to price (per night)
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="feature-description">
+                              <i class="fa-solid fa-angles-right"></i>
+                              Room No Smoking
+                            </td>
+                            <td class="feature-price">
+                              <span>+ 54$</span>
+                              to price (per night)
+                            </td>
+                          </tr>
+                        </table>
+                      </div>
+                    </div>
+                    <div
+                      class="tab-pane fade"
+                      id="nav-tab2_item"
+                      role="tabpanel"
+                      aria-labelledby="nav-tab2"
+                      tabindex="0">
+                      <div class="mt-60">
+                        <h3 class="title">Amenities</h3>
+                        <div class="location mt-40">
+                          <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115860.91759646642!2d89.28780421873043!3d24.84151459710791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fc54e7e81df441%3A0x27133ed921fe73f4!2sBogura!5e0!3m2!1sen!2sbd!4v1684842047185!5m2!1sen!2sbd"
+                            style="width: 930px; height: 373px"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                      </div>
+                      <div class="mt-60">
+                        <h3 class="title">Address</h3>
+                        <div class="contact mt-30">
+                          <div class="single-item">
+                            <img src="images/icon/globe.svg" alt="icon" />
+                            <p class="desc">City: New York</p>
+                          </div>
+                          <div class="single-item">
+                            <img src="images/icon/at-sign.svg" alt="icon" />
+                            <p class="desc">
+                              Email : nathan.roberts@example.com
+                            </p>
+                          </div>
+                          <div class="single-item">
+                            <img src="images/icon/headphones.svg" alt="icon" />
+                            <p class="desc">Phone : (208) 555-0112</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div
+                      class="tab-pane fade"
+                      id="nav-tab3_item"
+                      role="tabpanel"
+                      aria-labelledby="nav-tab3"
+                      tabindex="0">
+                      <div class="skill-progress-card">
+                        <div class="content">
+                          <h4 class="name">DEVID BEKHAM</h4>
+                          <p class="designation">Marketing Coordinator</p>
+                        </div>
+                        <div class="skill-progressbar-wrapper">
+                          <div class="skill-progressbar">
+                            <div class="progress-inner" data-percentage="46%">
+                              <h4 class="progress-inner-item">
+                                <span class="skill-title">Interior design</span>
+                              </h4>
+                              <div class="progress-content-outter">
+                                <div class="progress-content"></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="skill-progressbar">
+                            <div class="progress-inner" data-percentage="86%">
+                              <h4 class="progress-inner-item">
+                                <span class="skill-title">Architecture</span>
+                              </h4>
+                              <div class="progress-content-outter">
+                                <div class="progress-content"></div>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="skill-progressbar">
+                            <div class="progress-inner" data-percentage="75%">
+                              <h4 class="progress-inner-item">
+                                <span class="skill-title">Interior design</span>
+                              </h4>
+                              <div class="progress-content-outter">
+                                <div class="progress-content"></div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="counter-card">
+                          <div class="box">
+                            <div class="review-object">
+                              <h2 class="number">
+                                <span class="counter">6</span>
+                                <span class="prefix">+</span>
+                              </h2>
+                              <p class="title">years of experiences</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-lg-4">
             <div class="sidebar">
@@ -554,6 +810,14 @@
                     Safety Box
                   </label>
                 </div>
+              </div>
+              <div class="price-area mt-36">
+                <h6 class="title">Initial Price</h6>
+                <p class="desc mt-15">$558</p>
+              </div>
+              <div class="price-area mt-36">
+                <h6 class="title">Your Price</h6>
+                <p class="desc mt-15">$558</p>
               </div>
               <a
                 href="#"
