add: service-details

--- a/service-details.html
+++ b/service-details.html
@@ -561,58 +561,132 @@
                       </div>
                     </div>
                     <div
-                      class="tab-pane fade"
+                      class="tab-pane fade review"
                       id="nav-tab3_item"
                       role="tabpanel"
                       aria-labelledby="nav-tab3"
                       tabindex="0">
-                      <div class="skill-progress-card">
-                        <div class="content">
-                          <h4 class="name">DEVID BEKHAM</h4>
-                          <p class="designation">Marketing Coordinator</p>
+                      <div class="mt-60">
+                        <h3 class="title">Reviews</h3>
+                        <h2 class="review-number mt-30">0.0</h2>
+                      </div>
+                      <div class="mt-30">
+                        <table class="pricing-table">
+                          <tr>
+                            <td class="feature-description">Rating</td>
+                            <td class="feature-price">
+                              <span>0</span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="feature-description">grouped</td>
+                            <td class="feature-price">
+                              <span>0</span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="feature-description">variable</td>
+                            <td class="feature-price">
+                              <span>0</span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="feature-description">variable</td>
+                            <td class="feature-price">
+                              <span>0</span>
+                            </td>
+                          </tr>
+                        </table>
+                      </div>
+                      <div class="mt-50">
+                        <h3 class="title">Post a Comment</h3>
+                        <h4 class="title-two mt-30">Post a Comment</h4>
+                        <div class="divider mt-30 mb-24"></div>
+                        <div class="rating-system">
+                          <div class="rating-row">
+                            <label>Rating*</label>
+                            <div class="stars">
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9734;</span>
+                            </div>
+                          </div>
+                          <div class="rating-row">
+                            <label>Grouped*</label>
+                            <div class="stars">
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9734;</span>
+                              <span>&#9734;</span>
+                            </div>
+                          </div>
+                          <div class="rating-row">
+                            <label>Variable*</label>
+                            <div class="stars">
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                            </div>
+                          </div>
+                          <div class="rating-row">
+                            <label>External*</label>
+                            <div class="stars">
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9733;</span>
+                              <span>&#9734;</span>
+                              <span>&#9734;</span>
+                            </div>
+                          </div>
                         </div>
-                        <div class="skill-progressbar-wrapper">
-                          <div class="skill-progressbar">
-                            <div class="progress-inner" data-percentage="46%">
-                              <h4 class="progress-inner-item">
-                                <span class="skill-title">Interior design</span>
-                              </h4>
-                              <div class="progress-content-outter">
-                                <div class="progress-content"></div>
+                        <div class="comment-respond mt-50">
+                          <form action="#" method="post" class="comment-form">
+                            <div class="row gx-2">
+                              <div class="col-xl-12">
+                                <div class="contacts-message">
+                                  <textarea
+                                    name="comment"
+                                    cols="20"
+                                    rows="3"
+                                    placeholder="Comment"></textarea>
+                                </div>
+                              </div>
+                              <div class="col-xl-6">
+                                <div class="contacts-name">
+                                  <input
+                                    name="author"
+                                    type="text"
+                                    placeholder="Name *" />
+                                </div>
+                              </div>
+                              <div class="col-xl-6">
+                                <div class="contacts-email">
+                                  <input
+                                    name="email"
+                                    type="text"
+                                    placeholder="Email *" />
+                                </div>
+                              </div>
+                              <div class="col-xl-12">
+                                <div class="contacts-name">
+                                  <input
+                                    name="website"
+                                    type="text"
+                                    placeholder="Website" />
+                                </div>
+                              </div>
+                              <div class="col-12">
+                                <button class="theme-btn style-3" type="submit">
+                                  Send Message
+                                </button>
                               </div>
                             </div>
-                          </div>
-                          <div class="skill-progressbar">
-                            <div class="progress-inner" data-percentage="86%">
-                              <h4 class="progress-inner-item">
-                                <span class="skill-title">Architecture</span>
-                              </h4>
-                              <div class="progress-content-outter">
-                                <div class="progress-content"></div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="skill-progressbar">
-                            <div class="progress-inner" data-percentage="75%">
-                              <h4 class="progress-inner-item">
-                                <span class="skill-title">Interior design</span>
-                              </h4>
-                              <div class="progress-content-outter">
-                                <div class="progress-content"></div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="counter-card">
-                          <div class="box">
-                            <div class="review-object">
-                              <h2 class="number">
-                                <span class="counter">6</span>
-                                <span class="prefix">+</span>
-                              </h2>
-                              <p class="title">years of experiences</p>
-                            </div>
-                          </div>
+                          </form>
                         </div>
                       </div>
                     </div>
