add: team details page

--- a/home.html
+++ b/home.html
@@ -743,7 +743,9 @@
   </div>
 </div>
 <!-- Our Team Area Start -->
+<!-- team member area start -->
 
+<!-- team member area end -->
 <!-- Testimonial Area Start Style-4 -->
 <div class="testimonial-slider-area style-4 background-gray">
   <div class="container-fluid">
