add: blog-details and font-family add

--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Gilda+Display&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet" />
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -768,33 +768,6 @@
     </div>
     <!-- Blog End !-->
 
-    <!-- Header Search Bar Modal Start -->
-    <div class="search-form-wrapper">
-      <div class="search-form-inner">
-        <div class="search-content-filed">
-          <form role="search" method="get" class="search-form" action="#">
-            <input type="hidden" name="post_type" value="post" />
-            <div class="search-form-input">
-              <div class="search-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </div>
-              <input type="search" placeholder="Search" />
-              <button
-                class="theme-btn"
-                type="submit"
-                title="Search"
-                aria-label="Search">
-                Search
-              </button>
-            </div>
-          </form>
-          <span class="search-close">
-            <i class="fa-light fa-xmark"></i>
-          </span>
-        </div>
-      </div>
-    </div>
-    <!-- Header Search Bar Modal End -->
     <!-- Scroll Up Section Start -->
     <div id="scrollTop" class="scrollup-wrapper">
       <div class="scrollup-btn">
