--- a/error.html
+++ b/error.html
@@ -164,7 +164,7 @@
                           </li>
                           <li><a href="error.html">404</a></li>
                           <li>
-                            <a href="team-details.html">Coming Soon</a>
+                            <a href="coming-soon.html">Coming Soon</a>
                           </li>
                         </ul>
                       </li>
